# latent-bridge-games

./: .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: bridge.yaml  eval.yaml  fast_model.yaml  slow_model.yaml  training.yaml
demos/: combined_narrated.srt
docs/: 01_framing.md  02_related_work.md  03_experiment_plan.md  04_architecture.md  05_status.md  06_results.md  07_next_steps.md
paper/: abstract.txt  main.tex  neurips_arxiv.sty  refs.bib
paper/figures/: analysis.py  best_achievable.tex  combined.tex  decoder_sweep.tex  make_game_figs.py  make_paper_figures.py  predictor_data.json  stats.json  stats_summary.md  stats_table.tex
scripts/: README.md  aggregate_results.py  build_combined_demo.py  build_combined_srt.py  collect_highway_expert.py  collect_metadrive_expert.py  collect_minigrid_expert.py  collect_trajectories.py  continue_minigrid.sh  dagger_bridge.py  decoder_select_cv.py  demo_pipeline.sh  demos_new_games.sh  enduro_pipeline.sh  eval_metadrive_straight.py  eval_minigrid_shaped.py  extract_website_data.py  follow_on_enduro_qbert.sh  follow_on_oracle_retry.sh  follow_on_phase8.sh  follow_on_pong_and_ppo.sh  follow_on_rr_and_roadrunner.sh  follow_on_scaling_30b_retry.sh  follow_on_scaling_awq.sh  follow_on_scaling_awq_retry2.sh  follow_on_scaling_bf16.sh  gap_closers_chain.sh  latency_sweep_v2.sh  live_demo_server.py  make_best_achievable_table.py  make_figures.py  master_top3_chain.sh  mg_finish_clean.sh  nearest_neighbor_decode.py  nearest_neighbor_diagnostics.py  overnight_pipeline.sh  phase2_and_scaling.sh  pong_pipeline.sh  ppo_si_retry.sh  ppo_si_with_robust.sh  (+42 more)
scripts/archive/: README.md  continue_minigrid.sh  demo_pipeline.sh  demos_new_games.sh  follow_on_enduro_qbert.sh  follow_on_oracle_retry.sh  follow_on_phase8.sh  follow_on_pong_and_ppo.sh  follow_on_rr_and_roadrunner.sh  follow_on_scaling_30b_retry.sh  follow_on_scaling_awq.sh  qbert_resume.sh  (+7 more)
src/: __init__.py
tests/: test_benchmark.py  test_env_buffer_integration.py  test_imitation_data.py  test_prompts.py  test_ram_decoders.py  test_ring_buffer.py  test_stage_a_loop.py  test_stage_c.py
web/: index.html
web-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+49 files in other folders)
