[project]
name = "latent-bridge-games"
version = "0.1.0"
description = "Latent bridges between frozen fast multimodal and slow reasoning models for real-time game playing"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "peft>=0.13",
    "accelerate>=1.0",
    "bitsandbytes>=0.44",
    "datasets>=3.0",
    "pyyaml",
    "tqdm",
    "rich",
    "wandb",
    "ale-py>=0.10",
    "gymnasium[atari]>=1.0",
    "stable-baselines3>=2.0",   # SB3/PPO experts for Stage A behavioral cloning
    "opencv-python-headless",
    "pillow",
    "numpy",
    "einops",
    "matplotlib",               # scripts/make_figures.py, paper/figures
    "scipy",                    # bootstrap CIs / decoder-selection stats
    "requests",
    "pytest",
]

# Optional extras. The core install above reproduces the Atari headline results;
# these add the cross-domain experiments and the demo/website tooling.
#   pip install -e ".[demo]"           # narrated-demo build + live server
#   pip install -e ".[metadrive]"      # driving domain (controlled negative)
#   pip install -e ".[minigrid,highway]"
[project.optional-dependencies]
demo = ["flask", "gTTS"]
metadrive = ["metadrive-simulator"]
minigrid = ["minigrid"]
highway = ["highway-env"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
